site style is updated in HTML and CSS

--- a/SiteCSSs/style.css
+++ b/SiteCSSs/style.css
@@ -1,10 +1,12 @@
 body{
-    background-color: lightblue;
+    
+    margin: 0;
 }
 
 h1{
     color: gray;
-    text-align: center;    
+    text-align: center;
+    
 }
 
 h2{
@@ -17,7 +19,33 @@ footer{
     text-align: center;
 }
 
-ul{
+div{
     color: gray;
+    text-align: center;
+    font-size: 21px;
+}
+
+a {
+    text-decoration: none;
+    color: white;
+}
+
+.navbar{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: skyblue;
+    padding: 8px 12px
+}
+
+.navbar__menu{
+    display: flex;
+    list-style: none;
+    padding-left: 0;
+}
+
+.navbar__menu li {
+    padding: 8px 12px;
     
 }
+
