underbar and some disine changed in CSS

--- a/SiteCSSs/notice.css
+++ b/SiteCSSs/notice.css
@@ -38,3 +38,13 @@ a {
     padding: 8px 12px;
 }
 
+@media screen and (max-with: 768px){
+    .navbar{
+        flex-direction: column;
+        
+    }
+    .navbar__menu{
+        flex-direction: column;
+    }
+}
+
