--- a/SiteCSSs/team.css
+++ b/SiteCSSs/team.css
@@ -35,3 +35,12 @@ a {
 }
 
 
+@media screen and (max-with: 768px){
+    .navbar{
+        flex-direction: column;
+        
+    }
+    .navbar__menu{
+        flex-direction: column;
+    }
+}
