--- a/SiteCSSs/style.css
+++ b/SiteCSSs/style.css
@@ -50,11 +50,12 @@ a {
 }
 
 .under_bar {
-    color: darkgray;
+    display: flex;
+    color: skyblue;
     position: fixed;
     bottom: 0;
     max-height: 200px;
-    border: 3px solid #73AD21;
+    width: 100%;
 }
 
 @media screen and (max-with: 768px){
