--- a/SiteCSSs/style.css
+++ b/SiteCSSs/style.css
@@ -51,11 +51,12 @@ a {
 
 .under_bar {
     display: flex;
-    color: skyblue;
-    position: fixed;
+    background-color: skyblue;
+    position: relative;
     bottom: 0;
     max-height: 200px;
     width: 100%;
+    padding: 30px 0;
 }
 
 @media screen and (max-with: 768px){
