--- a/SiteCSSs/style.css
+++ b/SiteCSSs/style.css
@@ -57,6 +57,7 @@ a {
     max-height: 200px;
     width: 100%;
     padding: 30px 0;
+    text-align: center;
 }
 
 @media screen and (max-with: 768px){
