--- a/SiteCSSs/about.css
+++ b/SiteCSSs/about.css
@@ -21,7 +21,7 @@ a{
 
 .navbar{
     display: flex;
-    
+    align-items: center;
     justify-content: space-between;
     background-color: skyblue;
     padding: 8px 12px;
