--- a/SiteCSSs/about.css
+++ b/SiteCSSs/about.css
@@ -22,7 +22,7 @@ a{
 .navbar{
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     background-color: skyblue;
     padding: 8px 12px;
 }
