--- a/SiteCSSs/about.css
+++ b/SiteCSSs/about.css
@@ -1,10 +1,12 @@
 body{
+    
     margin: 0;
 }
 
 h1{
     color: gray;
     text-align: center;
+    
 }
 
 div{
@@ -13,7 +15,7 @@ div{
     font-size: 21px;
 }
 
-a{
+a {
     text-decoration: none;
     color: white;
 }
@@ -23,7 +25,7 @@ a{
     justify-content: space-between;
     align-items: center;
     background-color: skyblue;
-    padding: 8px 12px;
+    padding: 8px 12px
 }
 
 .navbar__menu{
@@ -37,7 +39,7 @@ a{
 }
 
 .navbar__menu li:hover {
-    background-color: blue;
+    background-color: aqua;    
 }
 
 @media screen and (max-with: 768px){
