--- a/SiteCSSs/team.css
+++ b/SiteCSSs/team.css
@@ -34,6 +34,11 @@ a {
     padding-left: 0;
 }
 
+.navbar__menu li:hover{
+    background-color: aqua;
+}
+
+
 
 @media screen and (max-with: 768px){
     .navbar{
