some system update

--- a/SiteCSSs/style.css
+++ b/SiteCSSs/style.css
@@ -1,5 +1,4 @@
 body{
-    
     margin: 0;
 }
 
@@ -35,7 +34,7 @@ a {
     justify-content: space-between;
     align-items: center;
     background-color: skyblue;
-    padding: 8px 12px
+    padding: 8px 12px;
 }
 
 .navbar__menu{
@@ -46,8 +45,6 @@ a {
 
 .navbar__menu li {
     padding: 8px 12px;
-    
-    
 }
 
 .navbar__menu li:hover{
