some style update is deployed

--- a/SiteCSSs/style.css
+++ b/SiteCSSs/style.css
@@ -62,6 +62,9 @@ a {
     text-align: center;
 }
 
-img{
-    size: 21px 21px;
+
+
+.under_bar div{
+    text-align: center;
+    font-size: 20px;
 }
