--- a/SiteCSSs/style.css
+++ b/SiteCSSs/style.css
@@ -41,6 +41,7 @@ a {
     display: flex;
     list-style: none;
     padding-left: 0;
+    padding-right: 0;
 }
 
 .navbar__menu li {
@@ -64,185 +65,95 @@ a {
 
 
 
-.under_bar div{
-    text-align: center;
-    font-size: 20px;
+* {
+    box-sizing: border-box;
 }
 
-#wrapper {
-    width: 600px;
-    margin: 50px auto;
-    height: 400px;
+body {
+    font-family: Verdana, sans-serif;
+}
+
+.mySlides {
+    display: none;
+}
+
+img {
+    vertical-align: middle;
+}
+
+/* Slideshow container */
+.slideshow-container {
+    max-width: 1000px;
     position: relative;
-    color: #fff;
-    text-shadow: rgba(0,0,0,0.1) 2px 2px 0px;
+    margin: auto;
 }
 
-#slider-wrap {
-    width: 600px;
-    height: 400px;
-    position: relative;
-    overflow: hidden;
-}
-
-#slider-wrap ul#slider {
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        top: 0;
-        left: 0;
-}
-
-#slider-wrap ul#slider li {
-    float: left;
-    position: relative;
-    width: 600px;
-    height: 400px;
-    }
-
-#slider-wrap ul#slider li > div {
+/* Caption text */
+.text {
+    color: #f2f2f2;
+    font-size: 15px;
+    padding: 8px 12px;
     position: absolute;
-    top: 20px;
-    left: 35px;
-}
-
-#slider-wrap ul#slider li > div h3 {
-    font-size: 36px;
-    text-transform: uppercase;
-}
-
-#slider-wrap ul#slider li > div span {
-    font-family: Neucha, Arial, sans serif;
-    font-size: 21px;
-}
-
-#slider-wrap ul#slider li img {
-    display: block;
+    bottom: 8px;
     width: 100%;
-    height: 100%;
-}
-
-
-/*btns*/
-.btns {
-    position: absolute;
-    width: 50px;
-    height: 60px;
-    top: 50%;
-    margin-top: -25px;
-    line-height: 57px;
-    text-align: center;
-    cursor: pointer;
-    background: rgba(0,0,0,0.1);
-    z-index: 100;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    -webkit-transition: all 0.1s ease;
-    -moz-transition: all 0.1s ease;
-    -o-transition: all 0.1s ease;
-    transition: all 0.1s ease;
-}
-
-.btns:hover {
-    background: rgba(0,0,0,0.3);
-}
-
-#next {
-    right: -50px;
-    border-radius: 7px 0px 0px 7px;
-}
-
-#previous {
-    left: -50px;
-    border-radius: 0px 7px 7px 7px;
-}
-
-#counter {
-    top: 30px;
-    right: 35px;
-    width: auto;
-    position: absolute;
-}
-
-#slider-wrap.active #next {
-    right: 0px;
-}
-
-#slider-wrap.active #previous {
-    left: 0px;
-}
-
-
-/*bar*/
-#pagination-wrap {
-    min-width: 20px;
-    margin-top: 350px;
-    margin-left: auto;
-    margin-right: auto;
-    height: 15px;
-    position: relative;
     text-align: center;
 }
 
-#pagination-wrap ul {
-    width: 100%;
-}
-
-#pagination-wrap ul li {
-    margin: 0 4px;
-    display: inline-block;
-    width: 5px;
-    height: 5px;
-    border-radius: 50%;
-    background: #fff;
-    opacity: 0.5;
-    position: relative;
+/* Number text (1/3 etc) */
+.numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
     top: 0;
 }
 
-#pagination-wrap ul li.active {
-    width: 12px;
-    height: 12px;
-    top: 3px;
-    opacity: 1;
-    box-shadow: rgba(0,0,0,0.1) 1px 1px 0px;
+/* The dots/bullets/indicators */
+.dot {
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
 }
 
-
-
-
-/*Header*/
-h1, h2 {
-    text-shadow: none;
-    text-align: center;
+.active {
+    background-color: #717171;
 }
 
-h1 {
-    color: #666;
-    text-transform: uppercase;
-    font-size: 36px;
+/* Fading animation */
+.fade {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 1.5s;
 }
 
-h2 {
-    color: #7f8c8d;
-    font-family: Neucha, Arial, sans serif;
-    font-size: 18px;
-    margin-bottom: 30px;
+@-webkit-keyframes fade {
+    from {
+        opacity: .4
+    }
+
+    to {
+        opacity: 1
+    }
 }
 
+@keyframes fade {
+    from {
+        opacity: .4
+    }
 
-
-
-/*ANIMATION*/
-#slider-wrap ul, #pagination-wrap ul li {
-    -webkit-transition: all 0.3s cubic-bezier(1,.01,.32,1);
-    -moz-transition: all 0.3s cubic-bezier(1,.01,.32,1);
-    -o-transition: all 0.3s cubic-bezier(1,.01,.32,1);
-    transition: all 0.3s cubic-bezier(1,.01,.32,1);
+    to {
+        opacity: 1
+    }
 }
-.navbar_logo2 {
-    width: auto;
-    max-height: 150px;
-    object-fit: cover;
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+    .text {
+        font-size: 11px
+    }
 }
