--- a/SiteCSSs/style.css
+++ b/SiteCSSs/style.css
@@ -62,7 +62,10 @@ a {
     padding: 30px 0;
     text-align: center;
 }
-
+.navber_logo2{
+    width: 10px;
+    height: 10px;
+}
 
 
 * {
@@ -156,4 +159,7 @@ img {
     .text {
         font-size: 11px
     }
+}
+.slide_img{
+    width: 100%;
 }
