--- a/SiteCSSs/style.css
+++ b/SiteCSSs/style.css
@@ -62,7 +62,7 @@ a {
     padding: 30px 0;
     text-align: center;
 }
-.navber_logo2{
+.navbar_logo2{
     width: 10px;
     height: 10px;
 }
@@ -160,6 +160,27 @@ img {
         font-size: 11px
     }
 }
-.slide_img{
+.img {
+    position: relative;
+    background-image: url(https://media.discordapp.net/attachments/844374847014174760/847816337321361428/unknown.png);
+    height: 100vh;
+    background-size: cover;
     width: 100%;
+}
+.img-cover {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    z-index: 1;
+}
+.img .content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 5rem;
+    color: white;
+    z-index: 2;
+    text-align: center;
 }
