--- a/SiteCSSs/style.css
+++ b/SiteCSSs/style.css
@@ -160,27 +160,6 @@ img {
         font-size: 11px
     }
 }
-.img {
-    position: relative;
-    background-image: url(https://media.discordapp.net/attachments/844374847014174760/847816337321361428/unknown.png);
-    height: 100vh;
-    background-size: cover;
+.slide_img{
     width: 100%;
-}
-.img-cover {
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
-    z-index: 1;
-}
-.img .content {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 5rem;
-    color: white;
-    z-index: 2;
-    text-align: center;
 }
