--- a/SiteCSSs/style.css
+++ b/SiteCSSs/style.css
@@ -62,8 +62,9 @@ a {
     padding: 30px 0;
     text-align: center;
 }
-.navbar_logo2{
+.navbar_logo2 {
     width: 100px;
+    float: left
 }
 
 
@@ -183,4 +184,8 @@ img {
 .explain{
     width:auto;
     background-color:aqua;
+    margin: 0;
+}
+.left_logo{
+    width: 50%;
 }
