--- a/SiteCSSs/style.css
+++ b/SiteCSSs/style.css
@@ -168,9 +168,9 @@ img {
 }
 .slide_img {
     width: 80%;
-    -webkit-filter: grayscale(100%);
+    filter: grayscale(100%);
             
-    -webkit-transition: .5s ease-in-out;
+    transition: .5s ease-in-out;
             
     -moz-filter: grayscale(100%);
     -moz-transition: .5s ease-in-out;
@@ -180,9 +180,9 @@ img {
 }
 .slide_img:hover {
     width:82%;
-    -webkit-filter: grayscale(0%);
+    filter: grayscale(0%);
             
-    -webkit-transition: .5s ease-in-out;
+    transition: .5s ease-in-out;
             
     -moz-filter: grayscale(0%);
     -moz-transition: .5s ease-in-out;
