--- a/SiteCSSs/team.css
+++ b/SiteCSSs/team.css
@@ -43,9 +43,13 @@ a {
 @media screen and (max-with: 768px){
     .navbar{
         flex-direction: column;
+        flex-direction: flex-start;
         
     }
     .navbar__menu{
         flex-direction: column;
+        align-items: center;
+        width: 100%;
     }
+
 }
