--- a/SiteCSSs/version.css
+++ b/SiteCSSs/version.css
@@ -9,3 +9,12 @@
     text-align: center;
     padding-top: 20px;
 }
+
+.check_input{
+    text-align: center;
+    padding-top: 10px;
+}
+
+@media screen and (max-width: 768px){
+    
+}
